bdr.BDR.scala.error
Compilation error:
BDR:2: error: type mismatch;
 found   : Unit
 required: Boolean
while (finished=0){
               ^